Activated more of foundation Small styling fixes

--- a/client/scss/poker.scss
+++ b/client/scss/poker.scss
@@ -3,17 +3,19 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:url('fonts/icomoon.eot?353xry');
-  src:url('fonts/icomoon.eot?#iefix353xry') format('embedded-opentype'),
-               url('fonts/icomoon.ttf?353xry') format('truetype'),
-               url('fonts/icomoon.woff?353xry') format('woff'),
-               url('fonts/icomoon.svg?353xry#icomoon') format('svg');
+  src: url('fonts/icomoon.eot?353xry');
+  src: url('fonts/icomoon.eot?#iefix353xry') format('embedded-opentype'),
+       url('fonts/icomoon.ttf?353xry') format('truetype'),
+       url('fonts/icomoon.woff?353xry') format('woff'),
+       url('fonts/icomoon.svg?353xry#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 $active-button-colour: blue;
 
+/**
+**/
 @mixin icon($lig){
   font-family: 'icomoon';
   speak: none;
@@ -181,6 +183,20 @@ $card-width: 5em;
 
 .button-container{
   @include equalwidth;
+  > span{
+    padding: 0 0.5rem;
+    &:first-of-type{
+      padding-left: 0;
+    }
+    &:last-of-type{
+      padding-right: 0;
+    }
+  }
+  label.button{
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
   input{
     display: none;
   }
@@ -212,6 +228,10 @@ li.button{
   padding: 0;
   line-height: 2em;
   font-size: 1.2em;
+}
+
+.icon-issue-type{
+  min-height: 24px;
 }
 .issue-row{
   @include grid-row;
